# Tessera

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Plan.md  README.md  architecture.md  build-convt-cd-deck.js  build-convt-numbers-deck.js  build-convt-phase-d-deck.js  build-deck.js  cloudbuild.yaml  deck-script-ko.md  personalities.md  recent_logs.json  tessera-deck.pptx
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: globals.css  layout.tsx
apps/web/: .env.example  instrumentation.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/attribution/[personaId]/: route.ts
apps/web/app/api/auth/sync/: route.ts
apps/web/app/api/broker/account/: route.ts
apps/web/app/api/broker/cancel-all/: route.ts
apps/web/app/api/broker/connect/: route.ts
apps/web/app/api/broker/execute/: route.ts
apps/web/app/api/broker/keys/: route.ts
apps/web/app/api/broker/orders/: route.ts
apps/web/app/api/cron/: README.md
apps/web/app/api/follow/: route.ts
apps/web/app/api/sentry-verify/: route.ts
apps/web/app/api/unsubscribe/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/how-it-works/: page.tsx
apps/web/app/proposals/: page.tsx
apps/web/components/: analyst-chat.tsx  app-shell.tsx  attribution-table.tsx  broker-connect.tsx  broker-panel.tsx  broker-sync.tsx  cumulative-chart.tsx  email-notify-toggle.tsx  follow-button.tsx  header.tsx  investors-leaderboard.tsx  kill-switch.tsx  live-trading-panel.tsx  notifications-toggle.tsx  order-confirm-modal.tsx  persona-avatar.tsx  persona-card.tsx  persona-detail-sheet.tsx  position-features.tsx  price-history-chart.tsx  profile-editor.tsx  profile-menu.tsx  related-thesis.tsx  report-list.tsx  sparkline.tsx  starting-capital-editor.tsx
apps/web/components/ui/: badge.tsx  button.tsx  tabs.tsx
apps/web/lib/: account-curve.ts  account-metrics.ts  analyst-data.ts  broker-crypto.ts  broker-mirror.ts  broker-rebalance.ts  broker.ts  chat-starters.ts  chat-stream.ts  db.ts  email.ts  gcp-auth.ts  performance-data.ts  performance-types.ts  thesis-types.ts  unsubscribe.ts  utils.ts
apps/web/lib/firebase/: auth-context.tsx  client.ts  messaging.ts  verify-token.ts
apps/web/lib/mock/: personas.ts  proposals.ts  reports.ts
apps/web/public/: firebase-messaging-sw.js
apps/worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/worker/scripts/: check_connections.py  deploy_cloud_run.ps1  deploy_cloud_run_jobs.ps1  dump_latest_proposal.py  dump_v_dei.py  dump_v_income_recent.py  dump_v_xbrl_concepts.py  ingest_spy_canary.py  inspect_ticker_features.py  inspect_v_rows.py  run_universe_ingest_and_features.py
apps/worker/tessera_worker/: __init__.py  config.py  db.py  logging.py  main.py  observability.py  universe.py
apps/worker/tessera_worker/agents/: LLM_pipeline_demo.md  __init__.py  anthropic_runner.py  chat.py  citation_validator.py  demo_warren_aapl.py  embeddings.py  models.py  persona_constraints.py  persona_loader.py  portfolio_construction.py  prompt_assembler.py  ticker_resolver.py
apps/worker/tessera_worker/execution/: __init__.py  alpaca_broker.py  broker.py  mirror_live.py  slippage.py
apps/worker/tessera_worker/features/: Quant_demo.md  __init__.py  compute.py  demo_data_explorer.py  demo_fcf_yield.py  demo_macro_sensitivity.py
apps/worker/tessera_worker/ingestors/: __init__.py  alpaca_eod.py  coinbase_eod.py  fmp_fundamentals.py  fmp_key_metrics.py  fred_macro.py  newsapi_news.py  sec_edgar.py  sec_edgar_facts.py  yf_history.py  yf_ohlcv.py  yf_shares.py
apps/worker/tessera_worker/jobs/: __init__.py  alpaca_paper.py  backfill_history.py  backfill_paper_history.py  backtest_baseline.py  backtest_harness.py  hallucination_canary.py  ingest_daily.py  persona_batch.py  spy_canary.py
apps/worker/tessera_worker/notify/: __init__.py  email.py  fcm.py
apps/worker/tessera_worker/risk/: __init__.py  attribution.py  gateway.py  mirror.py  paper_engine.py  var.py
apps/worker/tests/: test_alpaca_broker.py  test_anthropic_runner.py  test_attribution.py  test_backfill_paper_history.py  test_backtest_baseline.py  test_broker_scaffold.py  test_chat.py  test_email_notify.py  test_fcm.py  test_features.py  test_hallucination_canary.py  test_ingest_steps.py  test_ingestor_helpers.py  test_main_api.py  test_mirror.py  test_mirror_live.py  test_ohlcv_fallback.py  test_paper_engine.py  test_persona_batch.py  test_persona_loader.py  test_portfolio_construction.py  test_prompt_assembler.py  test_risk_gateway.py  test_slippage_harness.py  test_ticker_resolver.py  test_var.py
components/: analyst-chat.tsx  cumulative-chart.tsx  persona-card.tsx  persona-detail-sheet.tsx
components/ui/: badge.tsx  sheet.tsx
docs/: case-studies.md  improvement-plan-2026-06-11.md  retro-phase-B.md
docs/adr/: 000-template.md  001-monorepo-structure.md  002-postgres-timescale-pgvector.md  003-anthropic-claude-only.md  004-four-personas-and-voice-gatekeeper.md  005-hallucination-defense-numbers-in-code.md  006-vercel-cloud-run-split.md  007-public-open-source-repo.md  008-personalities-team-owned.md  README.md
docs/grafana/: cross-source-disagreements-dashboard.json  llm-cost-dashboard.json
docs/personas/: michael-draft.md
docs/runbooks/: cloud-run-iam-auth.md  cloud-run-jobs.md  firebase-auth.md  observability-grafana-voyage.md
lib/mock/: chat.ts  performance.ts  personas.ts
migrations/: 001_init.sql  002_persona_memory_vector_1024.sql  003_backtest_reports.sql  004_quality_features.sql  005_pe_ratios.sql  006_ohlcv_canonical_day.sql  007_hypothetical_track.sql  008_cross_source_disagreements.sql  009_llm_call_log_cost_namespace.sql  010_gross_margin_qtr_yoy.sql  011_fcf_yield_normalized.sql  012_users.sql  013_follow_events.sql  014_fcm_tokens.sql  015_user_profile.sql  016_gross_margin_qtr_series.sql  017_broker_connections.sql  README.md
(+19 files in other folders)
