[project]
name = "tessera-worker"
version = "0.1.0"
description = "Tessera batch workers — data ingestion, feature computation, persona theses, paper execution"
requires-python = ">=3.11"
dependencies = [
    # HTTP + scheduling
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",

    # Database
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.36",
    "pgvector>=0.3.0",

    # Data
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "pyarrow>=18.0.0",

    # Brokerage / market data
    "alpaca-py>=0.34.0",

    # LLM
    "anthropic>=0.39.0",

    # Schema + validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tessera-shared",

    # Observability
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "google-cloud-storage>=2.18.0",

    # SEC EDGAR HTML parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests",
]
# Phase C one-time historical backfill only. DO NOT add to production cron —
# yfinance is an unofficial Yahoo Finance scraper with no SLA. Install via
#   pip install -e ".[backfill]"
# then run `python -m tessera_worker.jobs.backfill_history --source yahoo`.
backfill = [
    "yfinance>=0.2.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tessera_worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
