[project]
name = "tessera-worker"
version = "0.1.0"
description = "Tessera batch workers — data ingestion, feature computation, persona theses, paper execution"
requires-python = ">=3.11"
dependencies = [
    # HTTP + scheduling
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",

    # Database
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.36",
    "pgvector>=0.3.0",

    # Data
    "pandas>=2.2.3",
    "numpy>=2.1.0",
    "pyarrow>=18.0.0",

    # Brokerage / market data
    "alpaca-py>=0.34.0",

    # LLM
    "anthropic>=0.39.0",
    "voyageai>=0.3.0",
    "rapidfuzz>=3.10.0",  # fuzzy ticker name matching (Level 5 of resolver)

    # Schema + validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tessera-shared",

    # Observability
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "google-cloud-storage>=2.18.0",

    # SEC EDGAR HTML parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",

    # yfinance — promoted from the [backfill] extra 2026-06-11. The daily
    # `yf_shares` + weekly `yf_history` orchestrator steps (3rd tier of the
    # fundamentals fall-through, see architecture.md §6 "Data resilience")
    # depend on it, so it must be in the Cloud Run image. It remains an
    # unofficial Yahoo scraper with no SLA: it is only ever a *fallback*
    # consulted when FMP + SEC EDGAR leave a field NULL, bounded by the
    # same sanity envelopes as our own computations.
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests",
]
# Kept for compatibility with documented `pip install -e ".[backfill]"`
# instructions. yfinance moved to core dependencies 2026-06-11 because the
# daily yf_shares / weekly yf_history orchestrator steps need it in prod —
# before that, the Cloud Run image silently no-op'd both steps (the
# ImportError was caught per ticker and the step reported ok=True).
backfill = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tessera_worker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

# ── Strict-debt ledger (2026-06-12) ─────────────────────────────────────
# Modules written before mypy gating existed. Listed explicitly so the
# debt is visible and CI can run mypy as a BLOCKING check for everything
# else (config, db, universe, logging, observability, jobs.ingest_daily,
# jobs.spy_canary, jobs.backfill_paper_history, risk.* (incl. var,
# attribution, gateway, paper_engine), agents.models/citation_validator/
# persona_loader/persona_constraints/embeddings, AND main are all
# strict-clean today — keep them so).
# Rules:
#   - NEW modules must NOT be added here. Write them strict-clean.
#   - When touching a listed module substantially, burn its debt and
#     remove it from this list (then mypy enforces it forever).
# Backlog when this ledger was created (2026-06-12): ~220 errors across
# these modules, mostly no-untyped-def on `session` params and bare
# `dict`/`list` generics. Burned down so far: tessera_worker.main
# (2026-06-13, #118 — 37 errors, all `_f/_i` annotations + bare dict).
# 15 modules remain.
[[tool.mypy.overrides]]
module = [
    "tessera_worker.features.compute",
    "tessera_worker.features.demo_data_explorer",
    "tessera_worker.features.demo_fcf_yield",
    "tessera_worker.features.demo_macro_sensitivity",
    "tessera_worker.agents.anthropic_runner",
    "tessera_worker.agents.prompt_assembler",
    "tessera_worker.agents.portfolio_construction",
    "tessera_worker.agents.ticker_resolver",
    "tessera_worker.agents.chat",
    "tessera_worker.agents.demo_warren_aapl",
    "tessera_worker.ingestors.*",
    "tessera_worker.jobs.hallucination_canary",
    "tessera_worker.jobs.persona_batch",
    "tessera_worker.jobs.backtest_harness",
    "tessera_worker.jobs.backfill_history",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
